# learning

./: README.md
rust_basics/: Cargo.toml  GITHUB_OPTIMIZATION_SUMMARY.md  LICENSE  README.md
rust_basics/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
rust_basics/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
rust_basics/.github/workflows/: ci.yml  release.yml
rust_basics/src/: closures.rs  control_flow.rs  data_types.rs  error_handling.rs  iterators.rs  main.rs
rust_basics/src/modules/: mod.rs  nested_modules.rs  reexports.rs  use_statements.rs  visibility.rs
src/: functions.rs  generics_traits.rs  ownership.rs  structs_enums.rs  variables.rs
